--- a/app/public/index.html
+++ b/app/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" type="text/css" href="/assets/css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
     <link
       rel="icon"
       type="image/x-icon"
-      href="./assets/images/icons8-filled-heart-16.png"
+      href="assets/images/icons8-filled-heart-16.png"
     />
     <link
       rel="stylesheet"
@@ -28,8 +28,8 @@
       src="https://kit.fontawesome.com/9a9678c181.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
-    <script type="text/javascript" src="assets/js/app.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+
     <title>GIF #reactions</title>
   </head>
   <body>
@@ -69,5 +69,6 @@
         icon by <a target="_blank" href="https://icons8.com">Icons8</a></span
       >
     </footer>
+    <script type="text/javascript" src="assets/js/app.js"></script>
   </body>
 </html>
